--- a/css/default.css
+++ b/css/default.css
@@ -18,11 +18,14 @@ header{
 #main2{
   background-color:khaki;
   width: 500px;
+  float: left;
 }
 aside{
   background-color:skyblue;
   width: 200px;
+  float: right;
 }
 footer{
   background-color:orchid;
+  clear: both;
 }
