--- a/css/default.css
+++ b/css/default.css
@@ -17,6 +17,13 @@ header{
   min-width: 500px;
   float: left;
 }
+.box{
+  background-color: tomato;
+  color: navy;
+  width: 240px;
+  margin: 5px;
+  float: left;
+}
 #main1{
   background-color:palegreen;
   width: 500px;
