--- a/css/default.css
+++ b/css/default.css
@@ -7,9 +7,14 @@
 
 body{
   background-color: plum;
+  margin: 48px 0 0 0;
 }
 header{
   background-color:coral;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
 }
 #main{
   background-color: lavender;
