--- a/css/default.css
+++ b/css/default.css
@@ -31,20 +31,13 @@ header{
   float: left;
   overflow: hidden;
 }
-#main1{
-  background-color:palegreen;
-  width: 500px;
-  float: left;
-}
-#main2{
-  background-color:khaki;
-  width: 500px;
-  float: left;
-}
 aside{
   background-color:skyblue;
   width: 200px;
   float: right;
+  position: relative;
+  top: 20px;
+  right: 10px;
 }
 footer{
   background-color:orchid;
