--- a/css/default.css
+++ b/css/default.css
@@ -44,7 +44,7 @@ footer{
   background-color:orchid;
   clear: both;
 }
-#moons{
+#round02-001{
   width: 24px;
   position: absolute;
   left: 50px;
